Set min-height: 0 on page-container__bottom to fix overflow behaviour of add token list (#8874)

--- a/ui/app/components/ui/page-container/index.scss
+++ b/ui/app/components/ui/page-container/index.scss
@@ -46,6 +46,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0;
   }
 
   &__footer {
